kubernetes/test-app/service.yaml
apiVersion: v1
kind: Service
metadata: { name: test-app, namespace: applications }
spec: { selector: { app: test-app }, ports: [{ name: http, port: 80, targetPort: http }], type: ClusterIP }
