kubernetes/test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  namespace: applications
  annotations: { alb.ingress.kubernetes.io/scheme: internet-facing, alb.ingress.kubernetes.io/target-type: ip, alb.ingress.kubernetes.io/healthcheck-path: / }
spec:
  ingressClassName: alb
  rules: [{ http: { paths: [{ path: /, pathType: Prefix, backend: { service: { name: test-app, port: { number: 80 } } } }] } }]
